<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_labels"
        android:title="@string/title_labels"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_share_backup"
        android:title="@string/share_backup"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/upload_to_drive"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_from_csv"
        android:showAsAction="never" />

</menu>
